fix button for collapsing

--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -49,6 +49,24 @@
         padding: 20px
         border-top: 1px solid #E0E0E0
 
+    tbody > tr > td:first-child
+        white-space: nowrap
+        display: inline-block
+
+.expandButton
+    width: 20px !important
+    height: 20px !important
+    border-radius: 100%
+    border: none
+    background: #2196F3
+    cursor: pointer
+    
+
+    
+
+.addSvg
+
+
 .resume
     font-family: lato
     background: #2d3436
@@ -70,6 +88,8 @@
     p
         font-size: 15px
         margin: 0px
+
+
 a
     color: white
     font-weight: bold
